syntax = "proto3";

package naming;

message AOR {
    string host = 1;
    uint32 port = 2;
    string id = 3;
}

message BindRequest {
    string serviceName = 1;
    AOR aor = 2;
}
message BindResponse {
    string error = 1;
}

message LookupRequest {
    string serviceName = 1;
}
message LookupResponse {
    AOR aor = 1;
    string error = 2;
}

message LookupManyRequest {
    string serviceName = 1;
    uint32 numberOfAor = 2;
}
message LookupManyResponse {
    repeated AOR aorList = 1;
    string error = 2;
}

message LookupAllRequest {
    string serviceName = 1;
}
message LookupAllResponse {
    repeated AOR aorList = 1;
    string error = 2;
}

// protoc --go_out=./ util.proto
