syntax = "proto3";

package proto;

message Error {
    uint64 code = 1;
    string message = 2;
}

message MessageWrapper {
    string type = 1;
    bytes message = 2;
}

// protoc --go_out=./ util.proto
